Correct spacing someplaces

--- a/assets/scss/components/globals.scss
+++ b/assets/scss/components/globals.scss
@@ -33,7 +33,7 @@ $lines: (1,2,3,4,5);
 }
 
 .title-spacer {
-    @apply pb-4;
+    @apply pb-8;
 
     @screen lg {
       @apply pb-8;
